# ModernCppErrorHandling

./: CMakeLists.txt  README.md  pipeline.cpp  pipeline.h  pipeline_test.cpp
